# hypermodern-python-tuto

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: coverage.yml  nox-tests.yml  nox.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/hypermodern_python/: __init__.py  __main__.py  language.py  ui.py
src/hypermodern_python/wikipedia/: __init__.py  article.py  article_schema.py  language.py  requester.py
src/hypermodern_python_tuto/: __init__.py  __main__.py  ui.py
src/hypermodern_python_tuto/wikipedia/: article.py  article_schema.py  language.py  requester.py
test/: __init__.py  conftest.py  test_language.py  test_main.py
test/wikipedia/: __init__.py  test_article.py  test_article_schema.py  test_language.py  test_requester.py
