[tool.poetry]
name = "hypermodern-python-tuto"
version = "0.1.1"
description = "Repo to follow the Claudio Jolowicz's tutorial about Hypermodern Python (https://cjolowicz.github.io/posts/hypermodern-python-01-setup/)"
authors = ["le-chartreux <le-chartreux-vert@protonmail.com>"]
readme = "README.md"
packages = [{include = "hypermodern_python", from = "src"}]
license = "MIT"
repository = "https://github.com/le-chartreux/hypermodern-python-tuto"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
marshmallow = "^3.19.0"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.__main__:main"

[tool.poetry.group.dev.dependencies]
nox = "^2022.11.21"

[tool.poetry.group.flake8.dependencies]
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-import-order = "^0.18.2"
flake8-annotations = "^3.0.0"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"

[tool.poetry.group.black.dependencies]
black = "^23.1.0"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.0.1"
typing-extensions = "^4.5.0"
types-requests = "^2.28.11.13"

[tool.poetry.group.pytest.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
xdoctest = "^1.1.1"
pygments = "^2.14.0"

[tool.poetry.group.pytype.dependencies]
pytype = {version = "^2023.2.17", python = "~3.10"}

[tool.poetry.group.typeguard.dependencies]
typeguard = "^2.13.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"


[tool.poetry.group.sphinx.dependencies]
sphinx-autodoc-typehints = "^1.22"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
